--- a/khodictionary/translate/templates/translate/document.html
+++ b/khodictionary/translate/templates/translate/document.html
@@ -100,112 +100,144 @@
           <div class="col-md-12" style="margin-top: 10px">
             <div class="section-heading text-center">
               <h4>Chọn tài liệu</h4>
-              <p>
-                Tải lên tệp .doc, .docx, .pdf, .txt, 
-              </p>
-              <input type="file" id="file-upload" required style="margin-left: 75px;"/>
-              <br>
-              <button type="button" class="btn btn-primary btn-sm" style="margin-top: 15px;">Dịch</button>
+              <p>Tải lên tệp .doc, .docx, .pdf, .txt,</p>
+              <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input
+                  type="file"
+                  name="upload"
+                  accept=".doc, .docx, .pdf, .txt"
+                  style="margin-left: 75px"
+                />
+                <br />
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-sm"
+                  style="margin-top: 15px"
+                >
+                  Dịch
+                </button>
+              </form>
+              <!--See File Uploaded-->
+              <h4 class="my-4">Thông tin File</h4>
+              <div class="row">
+                {% if file_url %}
+                <div class="container">
+                  <div class="translate">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <p>
+                          Uploaded to:<a href="{{ file_url }}"
+                            >{{ file_url }}</a
+                          >
+                        </p>
+                      </div>
+                      <div class="col-md-6 border-left pb-2 mb-0">
+                        <p>Dịch văn bản thành công!</p>
+                      </div>
+                    </div>
+
+                    {% else %}
+                    <p>Chưa có file nào được chọn</p>
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <section class="cards-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-heading text-center">
+              <h2 style="margin-top: 20px">Tiện ích</h2>
+              <hr class="divider" />
+            </div>
+            <div class="intro">
+              <p>Xem lịch sử tra cứu, các từ đã được lưu và đóng góp ý kiến.</p>
+            </div>
+          </div>
+        </div>
+        <div id="cards-wrapper" class="cards-wrapper row">
+          <div class="item item-green col-lg-4 col-6">
+            <div class="item-inner">
+              <div class="icon-holder">
+                <svg
+                  class="icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="45"
+                  height="45"
+                  fill="currentColor"
+                  class="bi bi-clock-history"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.79a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.976 7.976 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-.401.432l-.707-.707z"
+                  />
+                  <path
+                    d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z"
+                  />
+                  <path
+                    d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"
+                  />
+                </svg>
+              </div>
+              <h3 class="title">Lịch sử</h3>
+            </div>
+          </div>
+          <div class="item item-pink item-2 col-lg-4 col-6">
+            <div class="item-inner">
+              <div class="icon-holder">
+                <svg
+                  class="icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="45"
+                  height="45"
+                  fill="currentColor"
+                  class="bi bi-star-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
+                  />
+                </svg>
+              </div>
+              <h3 class="title">Đã lưu</h3>
+            </div>
+          </div>
+          <div class="item item-blue col-lg-4 col-6">
+            <div class="item-inner">
+              <div class="icon-holder">
+                <svg
+                  class="icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="45"
+                  height="45"
+                  fill="currentColor"
+                  class="bi bi-people-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"
+                  />
+                  <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
+                </svg>
+              </div>
+              <h3 class="title">Đóng góp</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
-  <section class="cards-section text-center">
-    <div class="container">
-      <!-- <h2 class="title">Tiện ích</h2>
-          <div class="intro">
-              <p>Xem lịch sử tra cứu, các từ đã được lưu và đóng góp ý kiến.</p>
-              
-          </div> -->
-      <div class="row">
-        <div class="col-12">
-          <div class="section-heading text-center">
-            <h2 style="margin-top: 20px">Tiện ích</h2>
-            <hr class="divider" />
-          </div>
-          <div class="intro">
-            <p>Xem lịch sử tra cứu, các từ đã được lưu và đóng góp ý kiến.</p>
-          </div>
-        </div>
-      </div>
-      <div id="cards-wrapper" class="cards-wrapper row">
-        <div class="item item-green col-lg-4 col-6">
-          <div class="item-inner">
-            <div class="icon-holder">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="45"
-                height="45"
-                fill="currentColor"
-                class="bi bi-clock-history"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.79a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.976 7.976 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-.401.432l-.707-.707z"
-                />
-                <path
-                  d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z"
-                />
-                <path
-                  d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"
-                />
-              </svg>
-            </div>
-            <h3 class="title">Lịch sử</h3>
-          </div>
-        </div>
-        <div class="item item-pink item-2 col-lg-4 col-6">
-          <div class="item-inner">
-            <div class="icon-holder">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="45"
-                height="45"
-                fill="currentColor"
-                class="bi bi-star-fill"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
-                />
-              </svg>
-            </div>
-            <h3 class="title">Đã lưu</h3>
-          </div>
-        </div>
-        <div class="item item-blue col-lg-4 col-6">
-          <div class="item-inner">
-            <div class="icon-holder">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="45"
-                height="45"
-                fill="currentColor"
-                class="bi bi-people-fill"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
-                />
-                <path
-                  fill-rule="evenodd"
-                  d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"
-                />
-                <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
-              </svg>
-            </div>
-            <h3 class="title">Đóng góp</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  {% endblock content %}
 </div>
-
-{% endblock content %}
